--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "geo_locator",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "plugin for retrieving the geodata from Metasaurus",
   "homepage": "https://github.com/primedia/preserves",
   "jam": {
     "dependencies": {
-      "jquery": null
+      "jquery": null,
+      "underscore": null
     },
     "main": "geo_locator.js",
     "include": [
